# pico-usb-headset

./: CMakeLists.txt  README.md
examples/hello_i2s_microphone/: CMakeLists.txt  main.c  main.h
examples/hello_pdm_microphone/: main.c
examples/usb_headset/: CMakeLists.txt  main.c  main.h  sample_rate_convert_demo.py  sample_rate_convertion.c  sample_rate_convertion.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_headset.c  usb_headset.h
examples/usb_headset_16b/: CMakeLists.txt  tusb_config.h  usb_descriptors.h  usb_headset.c  usb_headset.h
examples/usb_headset_16b_24b/: CMakeLists.txt  main.c  tusb_config.h  usb_headset.c
examples/usb_microphone_analog/: CMakeLists.txt  main.c  main.h  tusb_config.h  usb_descriptors.c  usb_microphone.c
examples/usb_microphone_i2s_mono/: CMakeLists.txt  main.c  main.h  tusb_config.h  usb_microphone.c  usb_microphone.h
examples/usb_microphone_i2s_stereo/: CMakeLists.txt  main.c  main.h  tusb_config.h  usb_descriptors.c  usb_microphone.c
examples/usb_microphone_pdm_mono/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c  usb_microphone.c
examples/usb_microphone_pdm_stereo/: CMakeLists.txt  main.c  tusb_config.h  usb_microphone.h
examples/usb_speaker/: CMakeLists.txt  common_types.h  main.c  usb_descriptors.c  usb_speaker.c  usb_speaker.h
examples/usb_speaker_16b/: CMakeLists.txt  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_speaker.c
examples/usb_speaker_16b_24b/: CMakeLists.txt  usb_descriptors.c  usb_descriptors.h  usb_speaker.c
examples/usb_speaker_multiformat/: CMakeLists.txt  common_types.h  main.c  main.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h.bck  usb_speaker.c
src/: audio_i2s_rx_32b.pio  audio_i2s_tx_16b.pio  audio_i2s_tx_32b.pio  dc_offset_filter.c  machine_i2s.c  pdm_microphone.c  pdm_microphone.pio  ring_buf.c  volume_ctrl.c
src/include/pico/: dc_offset_filter.h  default_i2s_board_defines.h  machine_i2s.h  pdm_microphone.h  ring_buf.h  volume_ctrl.h  volume_ctrl.hpp
